FEAT - Initial content

--- a/_posts/2023-10-01-spellers.md
+++ b/_posts/2023-10-01-spellers.md
@@ -1,10 +1,10 @@
 ---
-layout: game
+layout: post
 tags: unity webgl
 category: games
 itchio: https://alex-game-dev.itch.io/spellers
 game: https://itch.io/embed/1225017
-image: "/assets/spellers.png"
+image: "/assets/img/spellers.png"
 desc: Juego de construcción de mazos y combate para navegador.
 tags: 
     - unity
