--- a/_posts/2023-10-01-spellers.md
+++ b/_posts/2023-10-01-spellers.md
@@ -2,14 +2,9 @@
 layout: post
 tags: unity webgl
 category: games
-itchio: https://alex-game-dev.itch.io/spellers
-game: https://itch.io/embed/1225017
 image: "/assets/img/spellers.png"
-desc: Juego de construcción de mazos y combate para navegador.
-tags: 
-    - unity
-    - webgl
-    - game
+summary: Juego de construcción de mazos y combate para navegador.
+tags: [unity, android, game]
 ---
 
 Spellers es un juego SinglePlayer de duelos de magos. Contiene dos modos de juego principales: El modo historia cuenta con 15 niveles con combates prediseñados y el modo partida rápida permite al jugador construir su propio mazo de hechizos.
