FEAT - Dark theme

--- a/_posts/2023-10-15-jekyll.md
+++ b/_posts/2023-10-15-jekyll.md
@@ -2,11 +2,44 @@
 layout: post
 category: blog
 title: Como crear tu portfolio con Jekyll
-description: Aprende a crear tu propia pagina web de forma simple y rápida.
+thumbnail: "/assets/img/tmb-jekyll-portfolio.jpg"
+summary: Aprende a crear tu propia pagina web de forma simple y rápida. Jekyll es un generador de sitios web estáticos de código abierto. 
 ---
 
-Aprende a crear tu propia pagina web de forma simple y rápida.
+## ¿Qué es Jekyll?
 
+Jekyll es un generador de sitios web estáticos de código abierto. En lugar de generar webs dinámicas y utilizar bases de datos, Jekyll convierte una serie de archivos en formato markdown o html en páginas web precompiladas.
+
+A continuación se muestra un resumen del funcionamiento de jekyll, aunque es posible consultar la documentación completa en el siguiente enlace:
+
+https://jekyllrb.com/docs/
+
+config + includes + posts + assets -> _site
+
+## Instalación
+
+1. Instalar ruby ([Ruby Installer](https://rubyinstaller.org/))
+
+## Estructura de Jekyll
+
+|     |     |
+| --- | --- |
+| Includes | Ficheros .html que representan un componente reutilizable de la web. Puede utilizarse para crear elementos como el header o el footer. Para añadir el contenido de uno de estos ficheros se usa la etiqueta {% raw %}{% include file.html %}{% endraw %} |
+| Layouts | Ficheros .html que representan el diseño de una página de la web sin el contenido. En un blog, todos los post tendrán la misma estructura (cabecera, título del post, contenido, enlaces a otros posts, etc), pero el contenido será distinto. |
+| Posts | Archivos .md con el contenido de los post de la web.  En jekyll los post se organizan según la fecha de publicación. |
+| Pages | Funcionan igual que los post |
+
+## Structure
+
+
+1. Como funciona jekyll
+    - Que es jekyll
+    - Instalación
+    - Funcionamiento y estructura
+2. Como crear tu portfolio con jekyll
+    - Descargar y configurar theme
+    - Otros templates
+ 
 <!--more-->
 
 
