FEAT - About template

--- a/_posts/2023-10-15-jekyll.md
+++ b/_posts/2023-10-15-jekyll.md
@@ -3,7 +3,7 @@ layout: post
 category: blog
 title: Como crear tu portfolio con Jekyll
 thumbnail: "/assets/img/tmb-jekyll-portfolio.jpg"
-summary: Aprende a crear tu propia pagina web de forma simple y rápida. Jekyll es un generador de sitios web estáticos de código abierto. 
+summary: Aprende a crear tu propia pagina web de forma simple y rápida utilizando Jekyll, un generador de sitios web estáticos de código abierto. 
 ---
 
 ## ¿Qué es Jekyll?
@@ -31,6 +31,9 @@ config + includes + posts + assets -> _site
 
 ## Structure
 
+
+
+Para crear tu página con jekyll puedes utilizar el tema por defecto o descargar un tema y utilizarlo como plantilla.
 
 1. Como funciona jekyll
     - Que es jekyll
